bankapp-ocp/bankapp-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bankapp
  namespace: dev-test
  labels:
    app: bankapp
spec:
  host: bankapp-dev-test.apps.socp.techlab.it
  to:
    kind: Service
    name: bankapp
    weight: 100
  port:
    targetPort: 8888-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
